# scvk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.txt
include/: timer.h  vk_initializers.h  vk_types.h
shaders/: mesh.frag.glsl  mesh.frag.spv  mesh.vert.glsl  mesh.vert.spv
shaders/book2/: book2.comp.glsl  book2.spv
src/: CMakeLists.txt  app.cpp  app.h  buffer.h  camera.h  descriptors.cpp  descriptors.h  image.cpp  image.h  main.cpp  mesh.h  mesh_loader.h  pipelines.cpp  pipelines.h  texture.cpp  texture.h
